// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService Should return a token when user login 1`] = `
Object {
  "data": Object {
    "token": "123.123.123",
  },
  "errors": null,
}
`;

exports[`AuthService Should return an user when user register 1`] = `
Object {
  "data": Object {
    "email": "evandro@email.com",
    "name": "Evandro",
    "password": "123",
  },
  "errors": null,
}
`;
